SwaggerUi2Application writing... (#57)
